# Rust-server-Api

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  browser.js  index.d.ts  index.js  index.wasi-browser.js  index.wasi.cjs  package.json  server_rust_api.wasi-browser.js  server_rust_api.wasi.cjs  server_rust_api.wasm32-wasi.wasm
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
scripts/: publish-sequential.mjs
src/: lib.rs  unsupported.rs
src/windows/: get_windows_info.rs  mod.rs  send_Notification.rs
