
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "server_rust_api"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[dependencies.windows]
version = "0.62.2"
features = [
  "Data_Xml_Dom",
  "UI_Notifications",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_EnhancedStorage",
  "Win32_Storage_FileSystem",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_ProcessStatus",
  "Win32_System_Variant",
  "Win32_System_WinRT",
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
